@@ -33,6 +33,7 @@ V1.67
 ! Basic Mousewheel support for pattern edit mode (pooplog)
 * Fixed song bpm being misreported to machines if they used FF command
 ! VU Meters are all nicer
+! Look of Machine Wires can be changed in the visual dialog (pooplog)
 
 
 V1.66
